--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <title></title>
 <link rel="stylesheet" href="/bundle.css" />
+<link
+    href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap"
+    rel="stylesheet"
+/>
+
 <main></main>
 <script src="/bundle.js"></script>
