--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title></title>
+<title>Social Network</title>
 <link rel="stylesheet" href="/bundle.css" />
 <link
     href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap"
