--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <title>Social Network</title>
 <link rel="stylesheet" href="/bundle.css" />
-<link
-    href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap"
-    rel="stylesheet"
-/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
 <main></main>
 <script src="/bundle.js"></script>
