SN working on part 6

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <title>Social Network</title>
 <link rel="stylesheet" href="/bundle.css" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Edu+VIC+WA+NT+Beginner&display=swap"
+    rel="stylesheet"
+/>
 
-<main></main>
+<main class="flex"></main>
 <script src="/bundle.js"></script>
