--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Edu+VIC+WA+NT+Beginner&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Raleway:wght@300&display=swap"
     rel="stylesheet"
 />
 
